# joint

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .vimrc  Bridges.py  CMakeLists.txt  README.md  SomeInterface.py  TestObjects.idl  importer.py  joint.cmake  run-benchmarks.sh  run-tests.sh  test_module.py
benchmarks/: Benchmarks.hpp  CMakeLists.txt  CallAdapter.hpp  main.cpp  template.md
benchmarks/benchmarks/: Array.hpp  Basic.hpp  BenchmarksBase.hpp  Cast.hpp  Enum.hpp  Exception.hpp  Object.hpp  Struct.hpp
benchmarks/c/: Benchmarks.c  Benchmarks.jm  CMakeLists.txt  OtherTranslationUnit.c  OtherTranslationUnit.h
benchmarks/ci/: benchmarks.json  canon_data.json  reference_commit.txt  runner.py  template.py
benchmarks/cpp/: Benchmarks.cpp  Benchmarks.jm  CMakeLists.txt  OtherTranslationUnit.cpp  OtherTranslationUnit.hpp
benchmarks/descriptors/: joint.cpp  joint.hpp  swig.hpp
benchmarks/idl/: IBenchmarks.idl
benchmarks/implementations/: CMakeLists.txt
benchmarks/implementations/joint/: CMakeLists.txt
benchmarks/implementations/swig/: CMakeLists.txt  ISwigBenchmarks.cpp  ISwigBenchmarks.hpp  ISwigBenchmarks.i  SwigBenchmarks.java  java.manifest  python.manifest  swig_benchmarks.py
benchmarks/java/: Benchmarks.java  Benchmarks.jm  CMakeLists.txt
benchmarks/python/: Benchmarks.jm  Benchmarks_adapters.py  CMakeLists.txt  Component.py  benchmarks.py
benchmarks/swig/: ISwigBenchmarks.cpp  ISwigBenchmarks.hpp  ISwigBenchmarks.i  SwigBenchmarks.java  java.manifest  swig_benchmarks.py
benchmarks/templates/: array.md  basic.md  cast.md  enum.md  exception.md  object.md  struct.md
bindings/: CMakeLists.txt
bindings/c/: CMakeLists.txt
bindings/c/joint.c/: Accessor.h  Array.h  Component.h
bindings/cpp/: CMakeLists.txt  JointCpp.cpp  JointCpp.h  JointCppCore.cpp  JointCppCore.h
bindings/cpp/binding/: Binding.cpp  Binding.hpp  Module.cpp  Module.hpp
bindings/cpp/joint.c/: Accessor.h  Array.h  Component.h
bindings/cpp/joint.cpp/: Accessor.hpp  Array.hpp  BytesView.hpp  Component.hpp  Exception.hpp  IJointObject.hpp  MetaProgramming.hpp  Module.hpp  Ptr.hpp  Result.hpp  String.hpp  TypeList.hpp
bindings/cpp/test/: LinearizedInterfacesList.cpp
bindings/cpp/utils/: DynamicLibrary.cpp  DynamicLibrary.hpp
bindings/go/: CMakeLists.txt
bindings/go/joint/: accessor.go  objects_map.go
bindings/java/: CMakeLists.txt  JointJava.cpp  JointJava.h
bindings/java/binding/: Binding.cpp  Binding.hpp  Boxing.hpp  JavaBindingInfo.cpp  JavaBindingInfo.hpp  JointJavaContext.cpp  JointJavaContext.hpp  JointJavaCoreContext.cpp  JointJavaCoreContext.hpp  Marshaller.hpp  Module.cpp  Module.hpp  Object.cpp  Object.hpp
bindings/java/jni/: ArrayJNI.cpp  InterfaceDescriptorJNI.cpp  JNIHelpers.hpp  JointExceptionJNI.cpp  JointJNI.cpp  JointObjectJNI.cpp  ModuleContextJNI.cpp
bindings/java/utils/: Env.hpp  JPtr.hpp  JavaVirtualMachine.cpp  JavaVirtualMachine.hpp  JniError.cpp  JniError.hpp  TryOrTerminate.hpp  Utils.cpp  Utils.hpp
bindings/native/: CMakeLists.txt  JointNative.cpp  JointNative.h
bindings/native/binding/: Binding.cpp  Binding.hpp  Module.cpp  Module.hpp
bindings/native/utils/: DynamicLibrary.cpp  DynamicLibrary.hpp
bindings/python/: CMakeLists.txt  JointPython.cpp  JointPython.h  JointPythonCore.cpp  JointPythonCore.h  PyJoint.cpp  PythonBinding.cpp  PythonBinding.h  PythonContext.hpp  PythonModule.cpp  PythonModule.hpp  PythonObject.cpp  PythonObject.hpp  PythonUtils.hpp
bindings/python/binding/: Binding.cpp  Binding.hpp  Module.cpp  Module.hpp  Object.cpp  Object.hpp  PythonBinding.cpp  PythonBinding.hpp  PythonModule.cpp  PythonModule.hpp  PythonObject.cpp  PythonObject.hpp
bindings/python/common/: Marshaller.hpp  PythonBindingInfo.cpp  PythonBindingInfo.hpp
bindings/python/pyjoint/: Array.cpp  Array.hpp  Common.cpp  Common.h  Common.hpp  Globals.cpp  Globals.h  Globals.hpp  InterfaceDescriptor.cpp  InterfaceDescriptor.hpp  JointException.cpp  JointException.hpp  Module.cpp  Module.h  Module.hpp  Object.cpp  Object.h  Object.hpp  ProxyBase.cpp  ProxyBase.hpp  TypeDescriptor.cpp  TypeDescriptor.hpp
bindings/python/pyjoint_loader/: Globals.cpp  Globals.hpp  PyJointLoader.cpp
bindings/python/utils/: PyObjectHolder.hpp  PythonContext.hpp  PythonHeaders.h  PythonUtils.cpp  PythonUtils.hpp  ScopeExit.hpp
core/: CMakeLists.txt
core/idl/: IObject.idl
core/joint/: IObjectWrapper.hpp  ISomeInterface.hpp  Joint.cpp  Joint.h  JointConfig.h  JointCpp.hpp  JointLoader.cpp  JointLoader.h  SomeInterfaceWrapper.hpp
core/joint/accessors/: BindingAccessor.h  ModuleAccessor.h  ObjectAccessor.h
core/joint/core/: ISomeInterface.hpp  JointCore.cpp  JointCore.hpp  JointStructs.h  SomeInterfaceWrapper.hpp
core/joint/interop/: PythonModule.cpp  PythonModule.hpp  PythonUtils.hpp
devkit/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  IGreeter.idl  component.jm  main.cpp
joint/: CMakeLists.txt
joint-gen/: CMakeLists.txt  FindJointGen.cmake  joint-gen.py  joint.cmake  joint_gen.py  setup.py
joint-gen/joint/: GeneratorHelpers.py  IdlParser.py  SemanticGraph.py  __init__.py
joint/joint/: Joint.cpp  Joint.h  JointConfig.h  JointCore.cpp  JointCore.h  JointLoader.cpp  JointLoader.h
test/: CMakeLists.txt  test.cpp
test/c/: CMakeLists.txt  ShouldBeGenerated.h  Tests.c  Tests.h
test/core/: Location.hpp  ScopedTest.cpp  ScopedTest.hpp  TestContext.cpp  TestContext.hpp  TestEngine.cpp  TestEngine.hpp  Tests.cpp  Tests.hpp
test/cpp/: CMakeLists.txt  ShouldBeGenerated.hpp  Tests.cpp  Tests.h
test/idl/: IBasicTests.idl  ICastTests.idl  IExceptionTests.idl  IInterfaceChecksumTests.idl  IObjectTests.idl  IStarterTests.idl  IStructTests.idl  Tests.idl
test/integration/: CMakeLists.txt  IInterfaceChecksumTests.idl  test.cpp
test/java/: Adapters.java  CMakeLists.txt  Tests.java
test/python/: CMakeLists.txt  Component.py  ComponentUser.py  TestObjects.idl  Tests.jm  Tests.py
test/tests/: ArrayTests.hpp  CastTests.hpp  ExceptionTests.hpp  InterfaceChecksumTests.hpp  LifetimeTests.hpp  ObjectTests.hpp  StructTests.hpp  TestCtx.hpp
(+267 files in other folders)
