project(joint-gen)

set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)

install(FILES
	setup.py
	joint-gen.py
	DESTINATION share/joint-gen
	COMPONENT gen)

install(DIRECTORY
	joint
	DESTINATION share/joint-gen
	COMPONENT gen
	FILES_MATCHING PATTERN "*.py")

set(CPACK_DEBIAN_GEN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/deb/postinst;${CMAKE_CURRENT_SOURCE_DIR}/deb/prerm" PARENT_SCOPE)
set(CPACK_RPM_gen_POST_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/rpm/postinst" PARENT_SCOPE)
set(CPACK_RPM_gen_PRE_UNINSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/rpm/prerm" PARENT_SCOPE)
